--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js --name hisoka -- --max-old-space-size=8192",
     "pm2": "pm2 start index.js --name hisoka -- --max-old-space-size=8192",
     "restart:pm2": "pm2 restart hisoka",
     "stop:pm2": "pm2 stop hisoka"
