--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PAIRING_NUMBER=6289688200049
 OWNER=["6289688206739"]
 
 # untuk size auto restart, RAM sisa 350MB auto restart
-AUTO_RESTART=
+AUTO_RESTART=350
 
 # `true` untuk pribadi dan `false` untuk publik
 SELF=true
