--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # isi dengan nomor yang ingin anda jadikan bot, kode pairing muncul di log
-PAIRING_NUMBER=6289688200049
+PAIRING_NUMBER=
 
 # nomor owner untuk penggunaan command khusus owner
 OWNER=["6289688206739"]
 
 # untuk size auto restart, RAM sisa 350MB auto restart
-AUTO_RESTART=350 MB
+AUTO_RESTART=
 
 # `true` untuk pribadi dan `false` untuk publik
 SELF=true
